logos-codegen/tests/snapshots/codegen__explicit_lifetime1-tailcall.snap
---
source: logos-codegen/tests/codegen.rs
expression: formatted
---
#[automatically_derived]
impl<'a, 'b, 'c, 'd> ::logos::Logos<'b> for Token<'a, 'b, 'c, 'd> {
    type Error = ();
    type Extras = (&'a [String], &'c [bool]);
    type Source = ::core::primitive::str;
    fn lex(
        lex: &mut ::logos::Lexer<'b, Self>,
    ) -> ::core::option::Option<
        ::core::result::Result<Self, <Self as ::logos::Logos<'b>>::Error>,
    > {
        use ::logos::internal::{
            LexerInternal, CallbackRetVal, CallbackResult, SkipRetVal, SkipResult,
        };
        use ::core::result::Result as _Result;
        use ::core::option::Option as _Option;
        use ::logos::Lexer as _Lexer;
        use ::logos::Logos;
        macro_rules! _fast_loop {
            ($lex:ident, $test:ident, $offset:ident) => {
                'fast_loop : { while let _Option::Some(arr) = $lex .read:: < &
                [::core::primitive::u8; 8usize] > ($offset) { if $test (arr[0usize]) {
                $offset += 0usize; break 'fast_loop; } if $test (arr[1usize]) { $offset
                += 1usize; break 'fast_loop; } if $test (arr[2usize]) { $offset +=
                2usize; break 'fast_loop; } if $test (arr[3usize]) { $offset += 3usize;
                break 'fast_loop; } if $test (arr[4usize]) { $offset += 4usize; break
                'fast_loop; } if $test (arr[5usize]) { $offset += 5usize; break
                'fast_loop; } if $test (arr[6usize]) { $offset += 6usize; break
                'fast_loop; } if $test (arr[7usize]) { $offset += 7usize; break
                'fast_loop; } $offset += 8usize; } while let _Option::Some(byte) = $lex
                .read:: < ::core::primitive::u8 > ($offset) { if $test (byte) { break
                'fast_loop; } $offset += 1; } }
            };
        }
        macro_rules! _take_action {
            ($lex:ident, $offset:ident, $context:ident, $state:ident) => {
                { let action = _get_action($lex, $offset, $context); match action {
                CallbackResult::Emit(tok) => { return _Option::Some(_Result::Ok(tok)); },
                CallbackResult::Skip => { $lex .trivia(); $offset = $lex .offset();
                $context = _Option::None; return state0($lex, $offset, $context); },
                CallbackResult::Error(err) => { return _Option::Some(_Result::Err(err));
                }, CallbackResult::DefaultError => { return
                _Option::Some(_Result::Err(_make_error($lex))); }, } }
            };
        }
        #[inline]
        fn _make_error<'a, 'b, 'c, 'd>(
            lex: &mut _Lexer<'b, Token<'a, 'b, 'c, 'd>>,
        ) -> <Token<'a, 'b, 'c, 'd> as Logos<'b>>::Error {
            <<Token<
                'a,
                'b,
                'c,
                'd,
            > as Logos<'b>>::Error as ::core::default::Default>::default()
        }
        #[inline]
        fn _get_action<'a, 'b, 'c, 'd>(
            lex: &mut _Lexer<'b, Token<'a, 'b, 'c, 'd>>,
            offset: ::core::primitive::usize,
            context: _Option<LogosLeaf>,
        ) -> CallbackResult<'b, Token<'a, 'b, 'c, 'd>> {
            match context {
                _Option::None => {
                    lex.end_to_boundary(offset.max(lex.offset() + 1));
                    CallbackResult::Error(_make_error(lex))
                }
                _Option::Some(LogosLeaf::Leaf0) => {
                    let cb_result = {
                        let lex = lex;
                        lex.extras.0[2].trim()
                    };
                    CallbackRetVal::<
                        'b,
                        &'a str,
                        Token<'a, 'b, 'c, 'd>,
                    >::construct(cb_result, Token::A)
                }
                _Option::Some(LogosLeaf::Leaf1) => {
                    let token = Token::B(lex.slice());
                    CallbackResult::Emit(token)
                }
                _Option::Some(LogosLeaf::Leaf2) => {
                    let cb_result = {
                        let lex = lex;
                        &lex.extras.1[9]
                    };
                    CallbackRetVal::<
                        'b,
                        &'c bool,
                        Token<'a, 'b, 'c, 'd>,
                    >::construct(cb_result, Token::C)
                }
                _Option::Some(LogosLeaf::Leaf3) => {
                    let cb_result = {
                        let _ = lex;
                        &0.5
                    };
                    CallbackRetVal::<
                        'b,
                        &'d f32,
                        Token<'a, 'b, 'c, 'd>,
                    >::construct(cb_result, Token::D)
                }
            }
        }
        #[derive(::core::clone::Clone, ::core::marker::Copy)]
        enum LogosLeaf {
            Leaf0 = 0isize,
            Leaf1 = 1isize,
            Leaf2 = 2isize,
            Leaf3 = 3isize,
        }
        fn state0<'a, 'b, 'c, 'd>(
            lex: &mut _Lexer<'b, Token<'a, 'b, 'c, 'd>>,
            mut offset: ::core::primitive::usize,
            mut context: _Option<LogosLeaf>,
        ) -> _Option<
            _Result<Token<'a, 'b, 'c, 'd>, <Token<'a, 'b, 'c, 'd> as Logos<'b>>::Error>,
        > {
            let other = lex.read::<::core::primitive::u8>(offset);
            if let _Option::Some(byte) = other {
                #[derive(::core::marker::Copy, ::core::clone::Clone)]
                enum LogosNextState {
                    ___,
                    State1,
                    State2,
                    State3,
                    State4,
                }
                const TABLE: [LogosNextState; 256] = {
                    use LogosNextState::*;
                    [
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        State2,
                        State3,
                        State4,
                        State1,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                        ___,
                    ]
                };
                offset += 1;
                match TABLE[byte as ::core::primitive::usize] {
                    LogosNextState::State1 => {
                        return state1(lex, offset, context);
                    }
                    LogosNextState::State2 => {
                        return state2(lex, offset, context);
                    }
                    LogosNextState::State3 => {
                        return state3(lex, offset, context);
                    }
                    LogosNextState::State4 => {
                        return state4(lex, offset, context);
                    }
                    LogosNextState::___ => {}
                }
                offset -= 1;
            } else {
                if lex.is_prefix() {
                    lex.end(lex.offset());
                    return _Option::None;
                }
                if lex.offset() == offset {
                    return _Option::None;
                }
            }
            _take_action!(lex, offset, context, state)
        }
        fn state1<'a, 'b, 'c, 'd>(
            lex: &mut _Lexer<'b, Token<'a, 'b, 'c, 'd>>,
            mut offset: ::core::primitive::usize,
            mut context: _Option<LogosLeaf>,
        ) -> _Option<
            _Result<Token<'a, 'b, 'c, 'd>, <Token<'a, 'b, 'c, 'd> as Logos<'b>>::Error>,
        > {
            lex.end(offset);
            context = _Option::Some(LogosLeaf::Leaf3);
            let other = lex.read::<::core::primitive::u8>(offset);
            if let _Option::Some(byte) = other {} else {}
            _take_action!(lex, offset, context, state)
        }
        fn state2<'a, 'b, 'c, 'd>(
            lex: &mut _Lexer<'b, Token<'a, 'b, 'c, 'd>>,
            mut offset: ::core::primitive::usize,
            mut context: _Option<LogosLeaf>,
        ) -> _Option<
            _Result<Token<'a, 'b, 'c, 'd>, <Token<'a, 'b, 'c, 'd> as Logos<'b>>::Error>,
        > {
            lex.end(offset);
            context = _Option::Some(LogosLeaf::Leaf0);
            let other = lex.read::<::core::primitive::u8>(offset);
            if let _Option::Some(byte) = other {} else {}
            _take_action!(lex, offset, context, state)
        }
        fn state3<'a, 'b, 'c, 'd>(
            lex: &mut _Lexer<'b, Token<'a, 'b, 'c, 'd>>,
            mut offset: ::core::primitive::usize,
            mut context: _Option<LogosLeaf>,
        ) -> _Option<
            _Result<Token<'a, 'b, 'c, 'd>, <Token<'a, 'b, 'c, 'd> as Logos<'b>>::Error>,
        > {
            lex.end(offset);
            context = _Option::Some(LogosLeaf::Leaf1);
            let other = lex.read::<::core::primitive::u8>(offset);
            if let _Option::Some(byte) = other {} else {}
            _take_action!(lex, offset, context, state)
        }
        fn state4<'a, 'b, 'c, 'd>(
            lex: &mut _Lexer<'b, Token<'a, 'b, 'c, 'd>>,
            mut offset: ::core::primitive::usize,
            mut context: _Option<LogosLeaf>,
        ) -> _Option<
            _Result<Token<'a, 'b, 'c, 'd>, <Token<'a, 'b, 'c, 'd> as Logos<'b>>::Error>,
        > {
            lex.end(offset);
            context = _Option::Some(LogosLeaf::Leaf2);
            let other = lex.read::<::core::primitive::u8>(offset);
            if let _Option::Some(byte) = other {} else {}
            _take_action!(lex, offset, context, state)
        }
        state0(lex, lex.offset(), _Option::None)
    }
}
