logos-codegen/tests/snapshots/codegen__explicit_lifetime_not_found-tailcall.snap
---
source: logos-codegen/tests/codegen.rs
expression: formatted
---
impl<'a, 'b> ::logos::Logos<'lt> for Token<'a, 'b> {
    type Error = ();
    type Extras<'extras> = ();
    type Source = ::core::primitive::str;
    fn lex(
        lex: &mut ::logos::Lexer<'lt, '_, Self>,
    ) -> ::core::option::Option<
        ::core::result::Result<Self, <Self as ::logos::Logos<'lt>>::Error>,
    > {
        fn _logos_derive_compile_errors() {
            {
                ::core::compile_error!(
                    "Lifetime `'lt` not found in parameters\nAvailable lifetimes: `'a`, `'b`"
                )
            }
        }
        ::core::unimplemented!()
    }
}
